# Lineage

./: .gitignore  DESIGN.md  README.md  package-lock.json  package.json  tsconfig.json
plugin/: CMakeLists.txt  build.sh
plugin/Source/: JsEngine.cpp  JsEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StepSequencerComponent.cpp  StepSequencerComponent.h  WorkspaceComponents.cpp  WorkspaceComponents.h
plugin/Tests/: AutoEvolutionTest.cpp  BridgeTest.cpp  EditorSnapshot.cpp
scripts/: build.sh
src/: embellishment.ts  fill.ts  groove.ts  index.ts  jsonFileLibrary.ts  library.ts  lineage.ts  liveLoopSession.ts  mutation.ts  persistence.ts  rng.ts  runtime.ts  scriptMutations.ts  types.ts  vocabulary.ts  vocabularyStyle.ts
src/__tests__/: barRange.test.ts  embellishment.test.ts  fill.test.ts  jsonFileLibrary.test.ts  library.test.ts  lineage.test.ts  liveLoopSession.test.ts  mutation.test.ts  persistence.test.ts  scriptMutations.test.ts  vocabulary.test.ts  vocabularyStyle.test.ts
src/mutations/: barRange.ts  ghostNote.ts  index.ts  velocityHumanize.ts
tools/midi-analysis/: README.md  analyze.py  app.py  build_library.py  make_sample_corpus.py  note_usage.py  requirements.txt
tools/midi-analysis/app_pages/: cluster_view.py  correlation_view.py  loader.py  note_mapper.py  overview.py  pattern_browser.py  transition_explorer.py
tools/midi-analysis/lineage_midi_analysis/: __init__.py  clustering.py  diff.py  discovery.py  distance.py  drum_map.py  fingerprint.py  grid.py  library.py  parser.py  pattern_library.py  patterns.py  quantize.py  stats.py  transitions.py  vocabulary.py
tools/midi-analysis/sample_corpus/: rock_groove.mid  vocabulary.json
tools/midi-analysis/tests/: fixtures.py  test_app_smoke.py  test_clustering.py  test_diff.py  test_distance.py  test_drum_map.py  test_fingerprint.py  test_grid.py  test_library.py  test_note_usage.py  test_parser.py  test_pattern_library_pipeline.py  test_patterns.py  test_pipeline.py  test_quantize.py  test_stats.py  test_transitions.py
